--- a/index.html
+++ b/index.html
@@ -56,13 +56,15 @@
 
       <!-- Section Principal -->
       <section class="principal">
-        <p></p>
+        <img src="images/main.jpg" alt="Foto principal Mercedes" />
       </section>
     </main>
 
     <!-- Footer -->
     <footer>
       <p><span class="year"></span> &copy; Mercedes-Benz España</p>
+      <p><b>Telfn:</b> 678745214</p>
+      <p>Av. Juan Pablo II, 147, 10195 Cáceres</p>
     </footer>
 
     <!-- Pequeño Script para el año del copyright -->
